// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Analysis must render correctly NBC_AND_PNC 1`] = `"NBC & PNC - Analysis"`;

exports[`Analysis must render correctly NBC_AND_PNC: Analysis iframe 1`] = `
<iframe
  className="analysis-iframe"
  frameBorder="0"
  onLoad={[Function]}
  scrolling="yes"
  seamless={true}
  src="https://somesuperseturl.org/superset/dashboard/10/?standalone=true"
  title="pregnancy sms events analysis"
/>
`;

exports[`Analysis must render correctly nutrition 1`] = `"Nutrition - Analysis"`;

exports[`Analysis must render correctly nutrition: Analysis iframe 1`] = `
<iframe
  className="analysis-iframe"
  frameBorder="0"
  onLoad={[Function]}
  scrolling="yes"
  seamless={true}
  src="https://somesuperseturl.org/superset/dashboard/11/?standalone=true"
  title="pregnancy sms events analysis"
/>
`;

exports[`Analysis must render correctly pregnancy 1`] = `"Pregnancy - Analysis"`;

exports[`Analysis must render correctly pregnancy: Analysis iframe 1`] = `
<iframe
  className="analysis-iframe"
  frameBorder="0"
  onLoad={[Function]}
  scrolling="yes"
  seamless={true}
  src="https://somesuperseturl.org/superset/dashboard/9/?standalone=true"
  title="pregnancy sms events analysis"
/>
`;
